--- a/category.html
+++ b/category.html
@@ -11,7 +11,7 @@
 <body>
     
     <div class="background">
- <button class="back-button" onclick="goBack()">Back</button>
+<a href="index.html"> <button class="back-button">Back</button></a>
     
  <h2 class="categories__title">Select a Topic</h2> 
  
