--- a/alg1.html
+++ b/alg1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
-    <title>Stemania | Fractions</title>
+    <title>Stemania | Algebra</title>
     <link rel="stylesheet" href="css/alg1.css"> 
     <script> function restartPage()
              { location.reload(); }</script>
