--- a/con1.html
+++ b/con1.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
-    <title>Stemania | Fractions</title>
+    <title>Stemania | Unit Conversion</title>
     <link rel="stylesheet" href="css/con1.css"> 
+    <link rel="Website Icon" type="png" href="images/logo.png">
     <script> function restartPage()
              { location.reload(); }</script>
   </head> 
   <body> 
+    <div class="overlay-hint">
+      <img class="overlay-image-desktop" src="../images/Unicondes.png" alt="Overlay Image for Desktop">
+      <img class="overlay-image-mobile" src="../images/Uniconcp.png" alt="Overlay Image for Mobile">
+    </div>
+    <div class="skip-button" onclick="skipOverlay()">Skip</div>
+
     <div class="game-container"> 
       <div class="header">
         <div class="left-buttons">
@@ -53,7 +60,7 @@
         </div> 
 
         <button id="dropdown-btn" onclick="toggleDropdown()" class="closed">
-            Show Rationale
+            Show Solution
             <svg class="dropdown-icon" id="dropdown-icon" onclick="toggleDropdown()"            viewBox="0 0 24 24" >
               
                 <path fill="currentColor" d="M7 10l5 5 5-5z"/>
