--- a/con3.html
+++ b/con3.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
-    <title>Stemania | Fractions</title>
+    <title>Stemania | Unit Conversion</title>
     <link rel="stylesheet" href="css/con3.css"> 
+    <link rel="Website Icon" type="png" href="images/logo.png">
     <script> function restartPage()
              { location.reload(); }</script>
   </head> 
@@ -53,7 +54,7 @@
         </div> 
 
         <button id="dropdown-btn" onclick="toggleDropdown()" class="closed">
-            Show Rationale
+            Show Solution
             <svg class="dropdown-icon" id="dropdown-icon" onclick="toggleDropdown()"            viewBox="0 0 24 24" >
               
                 <path fill="currentColor" d="M7 10l5 5 5-5z"/>
@@ -61,7 +62,7 @@
         </button> 
         <ul id="dropdown-list">
             <li onclick="openVideoPopup('rationale/con3E.mp4')">English<span class="arrow">▶</span></li>
-            <li onclick="openVideoPopup(rationale/con3T.mp4')">Tagalog<span class="arrow">▶</span></li> </ul>
+            <li onclick="openVideoPopup('rationale/con3T.mp4')">Tagalog<span class="arrow">▶</span></li> </ul>
  <div id="video-popup-overlay">
       <div id="video-popup-container">
            <video id="video-popup-player" controls>               
