--- a/fra1.html
+++ b/fra1.html
@@ -6,10 +6,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
     <title>Stemania | Fractions</title>
     <link rel="stylesheet" href="css/fra1.css"> 
+    <link rel="Website Icon" type="png" href="images/logo.png">
     <script> function restartPage()
              { location.reload(); }</script>
   </head> 
   <body> 
+    <div class="overlay-hint">
+      <img class="overlay-image-desktop" src="../images/Fracdes.png" alt="Overlay Image for Desktop">
+      <img class="overlay-image-mobile" src="../images/Fraccp.png" alt="Overlay Image for Mobile">
+    </div>
+
+    <div class="skip-button" onclick="skipOverlay()">Skip</div>
+
     <div class="game-container"> 
       <div class="header">
         <div class="left-buttons">
@@ -51,7 +59,7 @@
         </div> 
 
         <button id="dropdown-btn" onclick="toggleDropdown()" class="closed">
-            Show Rationale
+            Show Solution
             <svg class="dropdown-icon" id="dropdown-icon" onclick="toggleDropdown()"            viewBox="0 0 24 24" >
               
                 <path fill="currentColor" d="M7 10l5 5 5-5z"/>
