--- a/fra3.html
+++ b/fra3.html
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
     <title>Stemania | Fractions</title>
     <link rel="stylesheet" href="css/fra3.css"> 
+    <link rel="Website Icon" type="png" href="images/logo.png">
     <script> function restartPage()
              { location.reload(); }</script>
   </head> 
@@ -56,7 +57,7 @@
         </div> 
 
         <button id="dropdown-btn" onclick="toggleDropdown()" class="closed">
-            Show Rationale
+            Show Solution
             <svg class="dropdown-icon" id="dropdown-icon" onclick="toggleDropdown()"            viewBox="0 0 24 24" >
               
                 <path fill="currentColor" d="M7 10l5 5 5-5z"/>
