--- a/trig3.html
+++ b/trig3.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
-    <title>Stemania | Fractions</title>
+    <title>Stemania | Trigonometry</title>
     <link rel="stylesheet" href="css/trig3.css"> 
+    <link rel="Website Icon" type="png" href="images/logo.png">
     <script> function restartPage()
              { location.reload(); }</script>
   </head> 
@@ -56,7 +57,7 @@
         </div> 
 
         <button id="dropdown-btn" onclick="toggleDropdown()" class="closed">
-            Show Rationale
+            Show Solution
             <svg class="dropdown-icon" id="dropdown-icon" onclick="toggleDropdown()"            viewBox="0 0 24 24" >
               
                 <path fill="currentColor" d="M7 10l5 5 5-5z"/>
