--- a/trig1.html
+++ b/trig1.html
@@ -12,8 +12,8 @@
   </head> 
   <body> 
     <div class="overlay-hint">
-      <img class="overlay-image-desktop" src="../images/Trigdes.png" alt="Overlay Image for Desktop">
-      <img class="overlay-image-mobile" src="../images/Trigcp.png" alt="Overlay Image for Mobile">
+      <img class="overlay-image-desktop" src="images/Trigdes.png" alt="Overlay Image for Desktop">
+      <img class="overlay-image-mobile" src="images/Trigcp.png" alt="Overlay Image for Mobile">
     </div>
     <div class="skip-button" onclick="skipOverlay()">Skip</div>
 
