--- a/category.html
+++ b/category.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Stemania | Category</title>
+    <link rel="Website Icon" type="png" href="images/logo.png">
     <link rel="stylesheet" href="css/category.css">
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
    </head>
