--- a/alg1.html
+++ b/alg1.html
@@ -25,7 +25,7 @@
           </a> 
         </div>  
           <span id="problemtitle">
-            Basic<br> Algebra Problem #1
+            Basic Algebra <br> Problem #1
         </span>
            <div id="righty">       
         <button id="play-button"></button> 
