--- a/alg2.html
+++ b/alg2.html
@@ -21,7 +21,7 @@
         </a> 
         </div>
         <span id="problemtitle">
-           Basic  <br> Algebra Problem #2
+           Basic   Algebra <br> Problem #2
         </span>
         <div id="righty">       
         <button id="play-button"></button> 
