--- a/alg3.html
+++ b/alg3.html
@@ -21,7 +21,7 @@
         </a> 
         </div>
         <span id="problemtitle">
-           Basic  <br> Algebra Problem #3
+           Basic   Algebra  <br> Problem #3
         </span>
         <div id="righty">       
         <button id="play-button"></button> 
