--- a/alg4.html
+++ b/alg4.html
@@ -20,7 +20,7 @@
               </a>   
         </div>
         <span id="problemtitle">
-           Basic <br>Algebra Problem #4
+           Basic Algebra  <br> Problem #4
         </span>
          <div id="righty">       
         <button id="play-button"></button> 
