--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Problems presented on this website will help students not only in dealing with t
     <div class="feature">
         <img src="images/algabout.png">
         <h3>Basic Algebra</h3>
-        <p>Basic algebra focuses on mathematical operations and structures, using symbols and letters to represent numbers and quantities.</p>
+        <p>Fraction, Basic algebra focuses on mathematical operations and structures, using symbols and letters to represent numbers and quantities.</p>
     </div>
     <div class="feature">
         <img src="images/trigabout.jpg">
