--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Problems presented on this website will help students not only in dealing with t
     <div class="feature">
         <img src="images/algabout.png">
         <h3>Basic Algebra</h3>
-        <p>Fraction, Basic algebra focuses on mathematical operations and structures, using symbols and letters to represent numbers and quantities.</p>
+        <p>Basic algebra focuses on mathematical operations and structures, using symbols and letters to represent numbers and quantities.</p>
     </div>
     <div class="feature">
         <img src="images/trigabout.jpg">
@@ -121,7 +121,7 @@ Problems presented on this website will help students not only in dealing with t
     <div class="faq-item">
       <button onclick="toggleFAQ('faq1')" class="faq-button" >What topics are offered on this website?</button>
       <div id="faq1" class="content">
-        <p>Basic Algebra, Pythagorean Theorem, Trigonometry, and Common Unit Conversion.</p>
+        <p>Fraction, Basic Algebra, Pythagorean Theorem, Trigonometry, and Common Unit Conversion.</p>
       </div>
     </div>
 
