--- a/index.html
+++ b/index.html
@@ -55,6 +55,15 @@ Games or Studying?
 <br><br>
 DO BOTH WITH STEMANIA
 <br><br>
+</p>
+<div class="video-wrapper">
+  <video src="FINAL ADS.mp4" controls>
+  </video>
+</div>
+
+  
+<p>
+            
             STEMANIA Website offers a variety of mathematical concepts that will help every student in the fundamentals of mathematics and needed to use in STEM specialized subjects.
         <br>
         <br>
