--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ DO BOTH WITH STEMANIA
 <br><br>
 </p>
 <div class="video-wrapper">
-  <video src="FINAL ADS.mp4" controls>
+  <video src="ani/FINAL ADS.mp4" controls>
   </video>
 </div>
 
