--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
          <div id="button">
              <a href="category.html"><button id="start">START</button></a>          </div>   
          </div>             
-            <img src="images/home.png" id="image">       
+         <div id="image">
+             <img src="images/home.png">   
+         </div>
+            
           </div>
 
            
