--- a/fra3.html
+++ b/fra3.html
@@ -67,8 +67,8 @@
             </svg>
         </button> 
         <ul id="dropdown-list">
-            <li onclick="openVideoPopup('rationale/fra1-3E.mp4')">English<span class="arrow">▶</span></li>
-            <li onclick="openVideoPopup('rationale/fra1-3T.mp4')">Tagalog<span class="arrow">▶</span></li> </ul>
+            <li onclick="openVideoPopup('rationale/fra3E.mp4')">English<span class="arrow">▶</span></li>
+            <li onclick="openVideoPopup('rationale/fra3T.mp4')">Tagalog<span class="arrow">▶</span></li> </ul>
  <div id="video-popup-overlay">
       <div id="video-popup-container">
            <video id="video-popup-player" controls>               
