--- a/fra2.html
+++ b/fra2.html
@@ -37,7 +37,7 @@
       </video> 
       <div id="page">
         <div class="info">
-          <h6 id="question"> A recipe for a soup calls for 2/3 cup of milk and 4/7 cup of cream. If you want to double the recipe, how much milk and cream do you need in total?
+          <h6 id="question"> A recipe for a soup calls for 2/3 cup of milk and 4/7 cup of cream. If you want to double the recipe, how much milk and cream do you need?
           </h6>
           <span class="steps">2/5</span>
         </div>
@@ -52,7 +52,7 @@
           <label for="value-3">1 and 2/3 cup of milk, 8/7 cup of cream
 </label>
           <input type="radio" id="value-4" name="value-radio" value="value-4">
-          <label for="value-4">1 and 5/6 cup of milk, 1 1/7 cup of cream
+          <label for="value-4">1 and 1/3 cup of milk, 1 and 1/7 cup of cream
 </label>
           <span class="result success">Congratulations!</span>
           <span class="result error">Bad answer</span>
