--- a/con4.html
+++ b/con4.html
@@ -36,13 +36,13 @@
       </video> 
       <div id="page">
         <div class="info">
-          <h6 id="question"> To prepare for a bicycle race, eleste wants to ride her bicycle for 20 miles. The app she is using to track her distance only cites distance in kilometers.Using the conversion that 1 kilometer= 0.62 miles which of the following is closes to the exact number of kilometers she should ride?
+          <h6 id="question"> To prepare for a bicycle race, Celeste wants to ride her bicycle for 20 miles. The app she is using to track her distance only cites distance in kilometers.Using the conversion that 1 kilometer= 0.62 miles which of the following is closes to the exact number of kilometers she should ride?
           </h6>
           <span class="steps">4/4</span>
         </div>
         <div id="answer-options" class="radio-input">
           <input type="radio" id="value-1" name="value-radio" value="value-1">
-          <label for="value-1">32 km
+          <label for="value-1">15 km
 </label>
           <input type="radio" id="value-2" name="value-radio" value="value-2">
           <label for="value-2">21 km
@@ -51,7 +51,7 @@
           <label for="value-3">34 km
 </label>
           <input type="radio" id="value-4" name="value-radio" value="value-4">
-          <label for="value-4">15 km
+          <label for="value-4">32 km
 </label>
           <span class="result success">Congratulations!</span>
           <span class="result error">Bad answer</span>
