--- a/pyth3.html
+++ b/pyth3.html
@@ -19,13 +19,14 @@
         <div class="left-buttons">
           <div id="lefty">       
         <a href="category.html">
-             <button id="return"></button>  
-              </a>   
+         <button id="return">             
+         </button>              
+        </a> 
         </div>
         <span id="problemtitle">
-            Pythagorean Theorem <br>Problem #3
+            Pythagorean  <br> Theorem Problem #3
         </span>
-         <div id="righty">       
+        <div id="righty">       
         <button id="play-button"></button> 
         <button id="restart" onclick="restartPage()"></button>
       </div>
@@ -36,9 +37,9 @@
       </video> 
       <div id="page">
         <div class="info">
-          <h6 id="question">On the exam, there was a question:“ A right triangle has a hypotenuse with length 14m. If the longer leg is twice the length of the shorter leg, what is the area of the triangle?” how to answer the question on the exam?
+          <h6 id="question">>On the exam, there was a question:“ A right triangle has a hypotenuse with length 14m. If the longer leg is twice the length of the shorter leg, what is the area of the triangle?” how to answer the question on the exam?
           </h6>
-          <span class="steps">3/3</span>
+          <span class="steps">3/5</span>
         </div>
         <div id="answer-options" class="radio-input">
           <input type="radio" id="value-1" name="value-radio" value="value-1">
@@ -74,8 +75,10 @@
            </video>
             <button id="close-video-popup" onclick="closeVideoPopup()">Close</button> 
             </div>            
-     </div>     
-         </div>  
+     </div>  
+   
+     <div> <button id="next-button" style="display: none;">Next❯</button> </div>
+    </div>  
     <button class="back-button" onclick="goBack()">❮Previous</button> 
     <button id="soundButton" class="sound-on" onclick="toggleSound()">
   <span id="soundIcon" class="sound-icon"></span>
