--- a/pyth3.html
+++ b/pyth3.html
@@ -37,7 +37,7 @@
       </video> 
       <div id="page">
         <div class="info">
-          <h6 id="question">>On the exam, there was a question:“ A right triangle has a hypotenuse with length 14m. If the longer leg is twice the length of the shorter leg, what is the area of the triangle?” how to answer the question on the exam?
+          <h6 id="question">On the exam, there was a question:“ A right triangle has a hypotenuse with length 14m. If the longer leg is twice the length of the shorter leg, what is the area of the triangle?” how to answer the question on the exam?
           </h6>
           <span class="steps">3/5</span>
         </div>
