--- a/trig4.html
+++ b/trig4.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
     <title>Stemania | Trigonometry</title>
-    <link rel="stylesheet" href="css/trig3.css"> 
+    <link rel="stylesheet" href="css/trig4.css"> 
     <link rel="Website Icon" type="png" href="images/logo.png">
     <script> function restartPage()
              { location.reload(); }</script>
@@ -24,7 +24,7 @@
         </a> 
         </div>
         <span id="problemtitle">
-            Trigonometry <br>Problem #3
+            Trigonometry <br>Problem #4
         </span>
         <div id="righty">       
         <button id="play-button"></button> 
@@ -33,27 +33,26 @@
     </div>
   </div>
       <video id="video-player" autoplay >  
-        <source src="ani/trig3.mp4" type="video/mp4"> 
+        <source src="ani/trig4.mp4" type="video/mp4"> 
       </video> 
       <div id="page">
         <div class="info">
-          <h6 id="question"> Izzy was in their basement 42 meters below their living room. She wanted to be above, in their living room. She turned diagonally for 100 meters until she was above ground. What is the angle of elevation, in degrees, of Izzy's climb?
-
+          <h6 id="question"> Baby is playing with toy bricks. She made a 42 cm wide and 27 cm long castle. She wants the roof beams at an angle that each pair of opposite beams would meet exactly in the middle. What is the angle of elevation, in degrees, of the roof beams?
           </h6>
-          <span class="steps">3/5</span>
+          <span class="steps">4/5</span>
         </div>
         <div id="answer-options" class="radio-input">
           <input type="radio" id="value-1" name="value-radio" value="value-1">
-          <label for="value-1">24.8°
+          <label for="value-1">37.7°
 </label>
           <input type="radio" id="value-2" name="value-radio" value="value-2">
-          <label for="value-2">20.4°
+          <label for="value-2">38.1°
 </label>
           <input type="radio" id="value-3" name="value-radio" value="value-3">
-          <label for="value-3">28.1°
+          <label for="value-3">38.9°
 </label>
           <input type="radio" id="value-4" name="value-radio" value="value-4">
-          <label for="value-4">32.5°
+          <label for="value-4">37.4°
 </label>
           <span class="result success">Congratulations!</span>
           <span class="result error">Bad answer</span>
@@ -68,8 +67,8 @@
             </svg>
         </button> 
         <ul id="dropdown-list">
-            <li onclick="openVideoPopup('rationale/trig3E.mp4')">English<span class="arrow">▶</span></li>
-            <li onclick="openVideoPopup('rationale/trig3T.mp4')">Tagalog<span class="arrow">▶</span></li> </ul>
+            <li onclick="openVideoPopup('rationale/trig4E.mp4')">English<span class="arrow">▶</span></li>
+            <li onclick="openVideoPopup('rationale/trig4T.mp4')">Tagalog<span class="arrow">▶</span></li> </ul>
  <div id="video-popup-overlay">
       <div id="video-popup-container">
            <video id="video-popup-player" controls>               
@@ -85,7 +84,7 @@
   <span id="soundIcon" class="sound-icon"></span>
 </button>
     
-    <script src="trig3.js"></script> 
+    <script src="trig4.js"></script> 
   </body> 
 </html>
 
