--- a/fra5.html
+++ b/fra5.html
@@ -42,7 +42,7 @@
         </div>
         <div id="answer-options" class="radio-input">
           <input type="radio" id="value-1" name="value-radio" value="value-1">
-          <label for="value-1">1 and 1/5 cups
+          <label for="value-1">3.5 cups
 </label>
           <input type="radio" id="value-2" name="value-radio" value="value-2">
           <label for="value-2">9/10 cups
@@ -51,7 +51,7 @@
           <label for="value-3">3/5 cups
 </label>
           <input type="radio" id="value-4" name="value-radio" value="value-4">
-          <label for="value-4"> 1 and 1/2 cups
+          <label for="value-4"> 4.5 cups
 </label>
           <span class="result success">Congratulations!</span>
           <span class="result error">Bad answer</span>
