--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <img src="images/STEMANIA LEGIT LOGO.png" class="imglogo">
             <p class="paragraph">Explore a new world of learning</p>            </div>                        
          <div id="button">
-             <a href="category.html"><button id="start">START</button></a>          </div>   
+             <a href="intro2.html"><button id="start">START</button></a>          </div>   
          </div>             
          <div id="image">
              <img src="images/home.png">   
