--- a/intro2.html
+++ b/intro2.html
@@ -21,7 +21,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
     overflow: hidden;
     position: relative;
 }
@@ -126,7 +126,13 @@ body {
 #button:hover {
     opacity: 1;
 }
-
+        
+ @media (max-width: 700px) {
+  #video-container {   
+    height: 80vh;
+  }
+ }
+        
     </style>
 </head>
 <body>
