--- a/index.html
+++ b/index.html
@@ -176,6 +176,64 @@ Problems presented on this website will help students not only in dealing with t
     </div>
   </div>
 
+        <div class="developer">
+  <div class="inner">   
+  <div id="devs">
+  DEVELOPERS:    
+  </div>        
+  </div>
+  <div class="members">
+  <div class="item">
+    <img src="images/ara.png" alt="Image 1">
+    <h4>Arabella N. Resaba </h4>
+  </div>
+  <div class="item">
+    <img src="images/janna.png" alt="Image 2">
+    <h4>Janna Pawla F. Nones</h4>
+  </div>
+<div class="item">
+    <img src="images/izzy.png" alt="Image 1">
+    <h4>Princess Izzy M. Santiago</h4>
+  </div>
+<div class="item">
+    <img src="images/sarah.png" alt="Image 1">
+    <h4>Sarah Cassandra S. Macalilong</h4>
+  </div>
+<div class="item">
+    <img src="images/crissa.png" alt="Image 1">
+    <h4>Crissa Joyce D. Ona </h4>
+  </div>
+<div class="item">
+    <img src="images/lorie.png" alt="Image 1">
+    <h4>Lorie Mae M. Urgel</h4>
+  </div>
+<div class="item">
+    <img src="images/tj.png" alt="Image 1">
+    <h4>Tj Mark P. Urbana</h4>
+  </div>
+<div class="item">
+    <img src="images/clarence.png" alt="Image 1">
+    <h4>Clarence M. Fadrigon</h4>
+  </div> 
+<div class="item">
+    <img src="images/myrk.png" alt="Image 1">
+    <h4>Myrk Kelvin Edwin G. Ong</h4>
+  </div>
+<div class="item">
+    <img src="images/mark.jpg" alt="Image 1">
+    <h4>Mark Vincent R. Estrella</h4>
+  </div>
+<div class="item">
+    <img src="images/me.png" alt="Image 1">
+    <h4>Janvie V. Acibo</h4>
+  </div>
+<div class="item">
+    <img src="images/luis.png" alt="Image 1">
+    <h4>Luis Albert R. Dela Rosa</h4>
+  </div>     
+</div>
+</div>
+
 
   <div id="contacts" class="section">
     <h2>CONTACT US</h2>
