--- a/intro2.html
+++ b/intro2.html
@@ -27,8 +27,8 @@ body {
 }
 
 #video {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
 }
 
 
@@ -131,6 +131,11 @@ body {
   #video-container {   
     height: 80vh;
   }
+
+     #video {
+    width: 100%;
+    height: auto;
+}
  }
         
     </style>
