--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ Problems presented on this website will help students not only in dealing with t
     <h4>Mark Vincent R. Estrella</h4>
   </div>
 <div class="item">
-    <img src="images/me.png" alt="Image 1">
+    <img src="images/me2.png" alt="Image 1">
     <h4>Janvie V. Acibo</h4>
   </div>
 <div class="item">
